--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Git Example</title>
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
-    <h1>kjdas;</h1>
+    <h1>git and github testing project</h1>
   </body>
 </html>
